--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elastictiles",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Vector tiles from Elasticsearch geohash grids",
   "scripts": {
     "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/mocha test/*.spec.js",
@@ -22,6 +22,7 @@
     "@mapbox/mvt-fixtures": "^3.5.0",
     "axios": "^0.18.0",
     "chai": "^4.2.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "istanbul": "^0.4.5",
     "mocha": "^7.0.0"
