--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "elastictiles",
-  "version": "0.1.3",
-  "description": "Mapbox Vector Tiles from Elasticsearch GeoHash grids",
+  "version": "0.2.0",
+  "description": "Mapbox Vector Tiles from Elasticsearch Geohash or Geotile grids",
   "scripts": {
     "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/mocha test/*.spec.js",
     "example": "nodemon --watch example --watch src -e js,html example/index.js"
